--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,14 @@
 {
   "files.associations": {
-    "vector": "cpp"
+    "vector": "cpp",
+    "__split_buffer": "cpp",
+    "bitset": "cpp",
+    "initializer_list": "cpp",
+    "iterator": "cpp",
+    "string": "cpp",
+    "string_view": "cpp",
+    "utility": "cpp",
+    "array": "cpp",
+    "ostream": "cpp"
   }
 }
