--- a/submit/sequential/Makefile
+++ b/submit/sequential/Makefile
@@ -4,10 +4,10 @@ CFLAGS=-pedantic -fsigned-char -Wall -Werror -Wextra -fopenmp
 .PHONY: all
 all: nQueens
 
-nQueens_task: nQueens.o
+nQueens: nQueens.o
 	$(CC) $(CFLAGS) -o nQueens nQueens.o
 
-nQueens_task.o: nQueens.cpp
+nQueens.o: nQueens.cpp
 	$(CC) $(CFLAGS) -c nQueens.cpp
 
 .PHONY: clean
